# spartacus-shoulder-kinematic-dataset

./: .gitignore  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: run_tests.yml
data/: check_csv.py  clean_dataset.py
data/Bourne 2003/: ST_medRotation_elevationFrontal_1.csv  ST_medRotation_elevationFrontal_3.csv  ST_medRotation_elevationFrontal_4.csv  ST_medRotation_horizontalFlexion_1.csv  (+17 more)
dataset/: dataset_clean.csv  only_dataset_raw.csv
examples/: broke_your_isb_intuition.py  check_compatibility.py  check_joints.py  check_segment_isb.py  count_isb_joint_sequences.py  first_example.py  left_and_right_side_rotation_matrices.py  load_confident_data.py  load_dataset.py  loading.py  plot.py  scapulothoracic_plot.py  second_example.py  static_plot.py  to_isb_example.py  validates_isb_conversion_intuition.py
figures/: draft_plotly.py  fake_data.py
shoulder/: __init__.py  angle_conversion_callbacks.py  checks.py  clean_dataset.py  descriptive_stats.py  enums.py  import_csv_from_data.py  kolz_matrices.py  row_data.py  utils.py
spartacus/: __init__.py  checks.py  enums.py  kolz_matrices.py  load.py  load_confident_data.py  row_data.py
tests/: check_csv.py  test_biomech_system.py  test_bourne_before_after.py  test_callbacks.py  test_checks.py  test_csv_data.py  test_dataset.py  test_example_left_hand_side.py  test_first_example.py  test_first_example_not_corrected.py  test_first_example_with_corrections.py  test_joint.py  test_kolz.py  test_to_segment_matrices_to_isb.py  utils.py
(+4122 files in other folders)
